Some more tests picked from Chessie

--- a/Tests/Tests.fsproj
+++ b/Tests/Tests.fsproj
@@ -52,6 +52,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClubbedToDeath.fs" />
     <Compile Include="AttemptTests.fs" />
     <None Include="paket.references" />
   </ItemGroup>
