Trying to match
https://github.com/fsharp/FSharpLangDesign/blob/master/RFCs/FS-1004-result-type.md

--- a/Tests/Tests.fsproj
+++ b/Tests/Tests.fsproj
@@ -44,7 +44,7 @@
     <Compile Include="ResultTests.fs" />
     <Compile Include="SimpleValidation.fs" />
     <Compile Include="ClubbedToDeath.fs" />
-    <Compile Include="AttemptTests.fs" />
+    <Compile Include="TrialTests.fs" />
     <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
