--- a/FSharp.Results/FSharp.Results.fsproj
+++ b/FSharp.Results/FSharp.Results.fsproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="paket.references" />
+    <None Include="Script.fsx" />
   </ItemGroup>
   <Import Project="$(FSharpTargetsPath)" />
   <Choose>
