Using attempt based on @enricosada comments and code

--- a/FSharp.Results/FSharp.Results.fsproj
+++ b/FSharp.Results/FSharp.Results.fsproj
@@ -44,6 +44,7 @@
     <Compile Include="ResultModule.fs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AttemptModule.fs" />
     <None Include="paket.references" />
     <None Include="Script.fsx" />
   </ItemGroup>
